Fix alignment, clean files

--- a/etc/css/style.css
+++ b/etc/css/style.css
@@ -141,6 +141,7 @@ QScrollArea#output {
 
 QCheckBox {
     font-weight: bold;
+    outline: none;
 }
 
 QCheckBox::indicator {
